Jann 30/objects/Deal_Phases__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Field__c</fullName>
        <label>Deal Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Need_To_Set_Deal_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Need To Set Deal Field</label>
        <type>Checkbox</type>
    </fields>
    <label>Deal Phases</label>
</CustomObject>